cell type and page

--- a/app/components/notification/notice_component.html.erb
+++ b/app/components/notification/notice_component.html.erb
@@ -1,4 +1,4 @@
 <div class="notification is-info is-light" data-controller="notice">
-  <button class="delete" data-action="click->notice#greet"></button>
+  <button class="delete" data-action="notice#delete"></button>
   <%= @notice %>
 </div>
