--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,26 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
   <%= render "admin/shared/header" %>
   <div class="container is-fullhd">
     <section class="section">
+      <%= render Notification::NoticeComponent.new(notice: notice) %>
       <%= yield %>
     </section>
-  </div>
-  <div id='hello' class="notification is-info is-light" data-controller="hello">
-    <button class="delete" data-action="hello#connect">fsdfsdfsdfsdf</button>
-    <%= @notice %>
-  </div>
-  <div data-controller="hello">
-    <input type="text">
-    <button data-action="click->hello#greet">Greet</button>
   </div>
 
 
